<resources>
    <string name="app_name">HitsPemudaBatak</string>
    <string name="jenis">
        1. Suku Batak Toba, adalah satu etnik dari sekian banyak rumpun Batak yang terdapat di Sumatra. Wilayah pemukiman suku Batak Toba meliputi kabupaten Toba Samosir yang terdiri dari Balige, Laguboti, Parsoburan dan sekitarnya.
Pada masa dahulu wilayah suku Batak Toba berada di Tapanuli Utara dan Tapanuli Tengah, yang disebut sebagai satu kesatuan etnis saja, yaitu suku Batak Toba. Tetapi karena terdapat perbedaan letak geografis dan pembagian distrik, maka saat ini suku Batak Toba dibagi menjadi beberapa puak Batak, yang disebut sebagai Rumpun Tapanuli yang saling berkerabat dekat secara kultural, yaitu suku Batak Toba, Batak Samosir, Batak Humbang dan Batak Silindung.
    </string>
    <string name="jenis1">2. Suku Batak Simalungun, adalah salah satu etnik Batak yang terkonsentrasi di kabupaten Simalungun provinsi Sumatra Utara. Wilayah kediaman suku Batak Simalungun berada di antara 2 etnik batak lainnya, yaitu suku Karo yang berada di kabupaten Tanah Karo dan suku Toba. Bahasa Simalungun sendiri memiliki kemiripan dengan bahasa Karo maupun bahasa Toba.

Sehingga bahasa Simalungun disebut sebagai bahasa batak tengah. Sebagian orang Simalungun saat ini percaya bahwa asal usul orang Simalungun, dikatakan berasal dari India, tepatnya dari daerah Assam, India Selatan, dari suatu tempat yang bernama Asom. Dilihat dari adat istiadat dan tradisi budaya orang Simalungun banyak memiliki kemiripan dengan adat istiadat dan tradisi budaya Batak Karo maupun Batak Toba.
    </string>
    <string name="jenis2">3. Karo adalah salah Suku Bangsa yang mendiami Dataran Tinggi Karo, Sumatera Utara, Indonesia. Suku ini merupakan salah satu suku terbesar dalam Sumatera Utara. Nama suku ini dijadikan salah satu nama Kabupaten di salah satu wilayah yang mereka diami (dataran tinggi Karo) yaitu Tanah Karo.

Suku ini memiliki bahasa sendiri yang disebut Bahasa Karo atau Cakap Karo. Pakaian adat suku Karo didominasi dengan warna merah serta hitam dan penuh dengan perhiasan emas. Karo dianggap sebagai bagian dari suku kekerabatan Batak, seperti kekerabatan Batak Toba, Batak Mandailing, Batak Simalungun, Batak Pak-Pak atau Dairi, dan Batak Karo.
    </string>
    <string name="jenis3">4. Suku Batak Pakpak, adalah suatu kelompok masyarakat yang terdapat di beberapa kabupaten di provinsi Sumatra Utara dan di sebagian wilayah provinsi Nanggroe Aceh. Orang Batak Pakpak, berbicara dalam bahasa sendiri, yaitu bahasa Pakpak. Sedangkan di Kelasen bahasa Pakpak disebut sebagai bahasa Dairi.

Bahasa Pakpak ini merupakan cabang dari rumpun bahasa Austronesia, yang termasuk dari salah satu cabang dari rumpun bahasa Batak. Bahasa Batak Pakpak memiliki kekerabatan dengan bahasa Batak Karo, tapi bahasa Pakpak juga banyak mirip dengan bahasa Batak Toba. Pemakai bahasa Pakpak sendiri mengalami penurunan diakibatkan banyaknya arus pendatang di luar suku Pakpak yang memasuki wilayah mereka.
    </string>
    <string name="jenis4">5. Suku Batak Mandailing/angkola adalah salah satu suku dari sekian banyak Rumpun Batak yang telah lama hidup dalam suatu komunitas di kabupaten Mandailing-Natal, penyebaran juga terdapat di kabupaten Padang Lawas, kabupaten Padang Lawas Utara, dan sebagian kabupaten Tapanuli Selatan yang berada di provinsi Sumatera Utara.

Orang Mandailing/angkola juga menyebar hingga ke wilayah provinsi Sumatra Barat, seperti di kabupaten Pasaman dan kabupaten Pasaman Barat. Suku Mandailing/angkola memiliki adat, budaya dan bahasa sendiri. Mereka berbicara dalam bahasa Mandailing/angkola. Bahasa Mandailing/angkola sendiri sangat berkerabat dengan bahasa Batak Toba.
    </string>
    <string name="marga">Marga Batak. Orang Batak selalu dikenal dengan marganya. Marga merupakan simbol bagi keluarga orang Batak. Karena marga berasal dari garis keturunan ayah, yang akan diteruskan secara turun menurun.

Juga Marga adalah identitas. Sampai-sampai kalau kamu bertemu dengan orang baru, pasti yang ditanyakan bukan nama, tapi marganya. Setelah bertanya marga, barulah mereka akan menanyakan hal yang lain. Kalau marganya sama dengan margamu, pasti persaudaraan langsung terjalin.

Serius bah, sampai saat ini begitu banyanya nama-nama marga etnis batak sampai-sampai tidak bisa hafal. Nah berikut ini adalah daftar marga batak yang disusun berdasarkan abjad.

    </string>
</resources>